<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_friend"
    android:layout_width="match_parent"
    android:background="#FFCC99"
    android:layout_marginBottom="0.5dp"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_alignParentTop="true"
            android:id="@+id/imag1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="image" />


        <TextView
            android:layout_below="@+id/imag1"
            android:id="@+id/event_Name"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/event_name" />


        <TextView
            android:layout_below="@+id/event_Name"
            android:id="@+id/date"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="end"
            android:layout_marginBottom="5dp"
            android:text="@string/date" />

        <LinearLayout
            android:layout_below="@+id/date"
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/likes"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="end"
                android:layout_marginBottom="5dp"
                android:text="@string/likes" />

            <TextView
                android:id="@+id/views"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="end"
                android:layout_marginBottom="5dp"
                android:text="@string/views" />

            <TextView
                android:id="@+id/shares"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="end"
                android:layout_marginBottom="5dp"
                android:text="@string/shares" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>